--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "dotenv": "^16.4.7",
     "esbuild": "^0.24.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
